[gd_scene load_steps=7 format=2]

[ext_resource path="res://learning_net/traning_net.gd" type="Script" id=1]
[ext_resource path="res://learning_net/target/target.tscn" type="PackedScene" id=2]
[ext_resource path="res://learning_net/gun/training_gun.tscn" type="PackedScene" id=3]
[ext_resource path="res://learning_net/bullet/Bullet.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "New Anim"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/info:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/info:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[node name="scene" type="Node2D"]
script = ExtResource( 1 )

[node name="traning_gun" parent="." instance=ExtResource( 3 )]
position = Vector2( 514.413, 546.505 )
Bullet = ExtResource( 4 )

[node name="target" parent="." instance=ExtResource( 2 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
margin_bottom = 29.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer"]
margin_right = 1024.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="save" type="Button" parent="CanvasLayer/MarginContainer/HBoxContainer"]
margin_left = 440.0
margin_right = 508.0
margin_bottom = 29.0
size_flags_horizontal = 6
size_flags_stretch_ratio = 3.52
text = "save"

[node name="menu" type="Button" parent="CanvasLayer/MarginContainer/HBoxContainer"]
margin_left = 953.0
margin_right = 1024.0
margin_bottom = 29.0
size_flags_horizontal = 4
text = "menu"

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer"]
margin_right = 365.0
margin_bottom = 294.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer2"]
margin_right = 365.0
margin_bottom = 49.0
size_flags_vertical = 0
text = "asdasdasd
"

[node name="info" type="MarginContainer" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/info"]
margin_top = 288.0
margin_right = 1024.0
margin_bottom = 311.0
text = "asdasdasda"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/New Anim" = SubResource( 1 )
anims/RESET = SubResource( 2 )

[connection signal="shoot" from="traning_gun" to="." method="_on_base_gun_shoot"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/HBoxContainer/save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/HBoxContainer/menu" to="." method="_on_exit_pressed"]
